src/routes/styles.css
@import '@fontsource/lato/400.css';
@import '@fontsource/lato/700.css';

:root {
	scroll-behavior: smooth;
	--vc-clr-primary: #3273dc;
}

body {
	font-family: 'Lato', sans-serif !important;
}

.sc-carousel__carousel-container.has-text-centered {
	flex-direction: column;
}

.sc-carousel__pages-container img {
	max-height: 60px;
}

.cookieConsentOperations__Item input[type='checkbox']:checked + label::before {
	background-color: var(--vc-clr-primary) !important;
}

.cookieConsentOperations__Item input[type='checkbox']:checked + label::after {
	background-color: white !important;
}

.cookieConsent__Button {
	border-radius: 4px;
}

.cookieConsent__Button--Close {
	background-color: var(--vc-clr-primary) !important;
}

.cookieConsent__Button[type='submit'] {
	background-color: var(--vc-clr-primary) !important;
	color: white;
}

.columns-section {
	position: relative;
}

.customer-logo {
	display: flex;
	justify-content: center;
	max-width: 35%;
}

.customer-logo-wide {
	display: flex;
	justify-content: center;
	max-width: 45%;
}

.customer-logo-extra-wide {
	display: flex;
	justify-content: center;
	max-width: 50%;
}

.customer-logo-extra-slim {
	padding-top: 11%;
	padding-bottom: 11%;
}

.has-image-centered {
	display: flex;
	height: 64px;
	margin-left: auto;
	margin-right: auto;
	margin-bottom: 10px;
	align-items: center;
}

.card {
	display: flex;
	flex-direction: column;
	height: 100%;
}

.card-content {
	flex-grow: 1;
}

.card-footer {
	width: 100%;
}

.team-content {
	margin-top: 4rem;
}

.navbar.is-link,
.hero.is-link,
.button.is-link {
	background-color: var(--vc-clr-primary);
}

